--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
@@ -83,7 +84,7 @@ h6 {
   font-size: 24px;
   margin: 0;
   padding: 0;
-  font-weight: 400;
+  font-weight: 600;
   -moz-text-align-last: center;
   text-align-last: center;
   font-family: "Poppins", sans-serif;
@@ -565,6 +566,7 @@ section {
 .portfolio .portfolio-wrap::before {
   content: "";
   background: rgba(255, 255, 255, 0.5);
+  position: absolute;
   left: 0;
   right: 0;
   top: 0;
@@ -1091,30 +1093,4 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
-}
-
-button {
-  background-color: #007bff;
-  border: none;
-  border-radius: 4px;
-  color: #fff;
-  padding: 12px 24px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
-button a {
-  color: inherit;
-  text-decoration: none;  
-}
-
-button:hover {
-  background-color: #0062cc;
-}
-
-button:active {
-  background-color: #0053a3;  
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15) inset;
 }
